Set max-width instead of width to fix the white space issue on Sign In page

--- a/src/components/SignInF.css
+++ b/src/components/SignInF.css
@@ -4,7 +4,7 @@
 }
 
 .sign-in-card {
-    width: 30rem;
+    max-width: 30rem;
     margin: auto;
     border-radius: 15px; 
     background-color: rgb(243, 222, 186); 
